--- a/index.css
+++ b/index.css
@@ -3,68 +3,7 @@
   margin: 0;
   padding: 0;
 }
-header {
-  display: flex;
-  padding: 40px;
-  justify-content: space-between;
-  align-items: center;
-  background: var(--primary-blue-100, #2c3878);
-  width: 100%;
-  height: 100px;
-}
-.menu-content {
-  display: flex;
-  justify-content: space-between;
-  gap: 60px;
-  list-style: none;
-  text-transform: capitalize;
-  display: none;
-}
-.links {
-  color: azure;
-  text-decoration: none;
-  display: block;
-}
-.links:focus + .focus {
-  width: 100%;
-  height: 2px;
-  background: rgba(11, 60, 221, 0.74);
-  position: absolute;
-  bottom: 0;
-}
 
-#menu-icon {
-  width: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.1rem;
-  z-index: 3000;
-}
-
-#menu-icon span {
-  width: 100%;
-  height: 5px;
-  background: #fff;
-  border-radius: 4px;
-}
-.mobile-menu-content {
-  display: flex;
-  flex-direction: column;
-  gap: 10%;
-  padding: 10% 4px;
-  position: fixed;
-  height: 10%;
-  width: 60%;
-  background: #0f024b7c;
-  list-style: none;
-  backdrop-filter: blur(4px);
-  top: 0;
-  right: -100%;
-  align-items: center;
-  font-weight: 700;
-  font-size: 1.2rem;
-  transition: all 2s;
-}
 main {
   align-items: center;
   display: flex;
@@ -86,12 +25,16 @@ main {
   line-height: 140%;
   padding-top: 20px;
 }
+.show-menu {
+  right: 0;
+}
 
 .image-sub {
   width: 252px;
   height: 200px;
   background: #2c3878;
   right: 10rem;
+  
   bottom: 1rem;
   position: relative;
 }
@@ -447,172 +390,10 @@ p {
   border: 1px solid;
   border-color: #333333;
 }
-footer {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 420px;
-  justify-content: space-between;
-}
-
-.top-foot {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 300px;
-  background-color: #2c3878;
-}
-
-.text-foot-right {
-  width: 323px;
-  font-size: 20px;
-  padding-top: 36px;
-  padding-left: 10px;
-  font-weight: 600;
-  line-height: 170%;
-  font-style: normal;
-  color: #fff;
-}
-
-.text-foot-left {
-  display: flex;
-  width: 432px;
-  padding-top: 36px;
-  gap: 30px;
-  flex-direction: column;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 160%;
-  font-style: normal;
-  color: #d9d9d9;
-}
-
-.button-f {
-  width: 142px;
-  background-color: #ffffff;
-  padding: 2px 32px;
-  color: #333333;
-  font-weight: 500;
-  line-height: 150%;
-  font-size: 14px;
-  text-decoration: none;
-  border: 1px solid;
-  border-color: #333333;
-}
-
-.bottom-footer {
-  height: 495px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 80px;
-  background-color: #fff;
-}
-
-.bottom-left {
-  width: 40%;
-  padding-left: 10px;
-}
-
-.bottom-right {
-  width: 50%;
-}
-
-.bottom-form {
-  width: 100%;
-}
-
-#bottom-text {
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 600px;
-  line-height: 170%;
-  color: #333;
-}
-
-h5 {
-  font-size: 18px;
-  font-weight: 400;
-  color: #333;
-  line-height: 160%;
-  margin-bottom: 23.5px;
-}
-
-#text-form {
-  display: flex;
-  gap: 4rem;
-  padding-top: 20px;
-}
-
-h6 {
-  color: #d9d9d9;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 160%;
-}
-
-.email {
-  width: 100%;
-  height: 1px;
-  background: #141414;
-  margin-top: 15px;
-}
-.socials {
-  display: flex;
-  flex-direction: column;
-  padding-top: 40px;
-  align-items: center;
-  font-size: 16px;
-}
-h4 {
-  width: 100px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 160%;
-  color: #333333;
-}
-
-.social-images {
-  margin-top: 15px;
-}
-.social-images > a {
-  margin-left: 15px;
-}
 
 /* * TABLET SCREEN  */
 
 @media (min-width: 768px) {
-  .menu-content {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    list-style: none;
-    text-transform: capitalize;
-  }
-
-  .links {
-    color: azure;
-    text-decoration: none;
-    display: block;
-  }
-
-  .links:focus + .focus {
-    width: 100%;
-    height: 2px;
-    background: rgba(11, 60, 221, 0.74);
-    position: absolute;
-    bottom: 0;
-  }
-
-  #menu-icon {
-    display: none;
-  }
-
-  .mobile-menu-content {
-    display: none;
-  }
-
   #caption {
     font-size: 35px;
     width: 270px;
@@ -815,47 +596,11 @@ h4 {
     width: 50%;
     height: 100px;
   }
-
-  .text-foot-left {
-    display: flex;
-    width: 232px;
-    padding-top: 36px;
-    gap: 40px;
-    flex-direction: column;
-    font-size: 16px;
-  }
-
-  .email {
-    width: 90%;
-  }
-
-  #text-form {
-    display: flex;
-    gap: 4rem;
-    justify-content: space-between;
-  }
-
-  .bottom-left {
-    padding-left: 50px;
-  }
-
-  #vector {
-    right: 3rem;
-    position: relative;
-  }
 }
 
 /* * DESKTOP SCREEN  */
 
 @media (min-width: 1110px) {
-  .menu-content {
-    display: flex;
-    justify-content: space-between;
-    gap: 60px;
-    list-style: none;
-    text-transform: capitalize;
-  }
-
   .image-sub {
     width: 252px;
     height: 525px;
@@ -1140,56 +885,5 @@ h4 {
   #image-mat-3 {
     width: 194px;
     height: 178px;
-  }
-
-  .text-foot-left {
-    display: flex;
-    width: 432px;
-    height: 58px;
-    gap: 20px;
-    flex-direction: column;
-    width: 432px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 160%;
-    font-style: normal;
-    color: #d9d9d9;
-  }
-
-  .text-foot-right {
-    width: 613px;
-    font-size: 36px;
-    align-content: center;
-    font-weight: 600;
-    line-height: 170%;
-    font-style: normal;
-    color: #fff;
-  }
-
-  #bottom-text {
-    margin-top: 22.5px;
-    width: 481px;
-    height: 122px;
-    display: flex;
-    flex-direction: column;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 600px;
-    line-height: 170%;
-    color: #333;
-  }
-
-  .social-images > a {
-    margin-left: 50px;
-  }
-
-  .socials {
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-  }
-
-  h4 {
-    align-self: flex-start;
   }
 }
