--- a/portfolio.css
+++ b/portfolio.css
@@ -10,11 +10,10 @@ main {
   padding: 2% 20px;
   flex-direction: column;
 }
-
 .sub-lay {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   /* height: 100px; */
   font-size: 16px;
   font-style: normal;
@@ -29,13 +28,14 @@ main {
 
 #caption {
   color: #000;
-  font-size: 20px;
+  font-size: 26px;
   font-style: normal;
   text-transform: capitalize;
   font-weight: 700;
   line-height: 140%;
   padding-top: 20px;
 }
+
 #image-lay {
   width: 100%;
   /* height: 300px; */
@@ -47,12 +47,13 @@ main {
   font-weight: 600;
   line-height: 170%;
   font-style: normal;
-  padding-top: 30px;
+  /* padding-top: 30px; */
 }
 .rule-two {
   text-transform: uppercase;
   display: flex;
   gap: 10px;
+  padding-top: 40px;
   font-size: 12px;
   font-weight: 500;
   line-height: 150%;
@@ -65,47 +66,66 @@ main {
   top: 7px;
   background-color: #131314d5;
 }
+.about-section {
+  display: flex;
+  flex-direction: column;
+}
 
-.bottom-abb-cont {
-  padding-top: 20px;
-  gap: 20px;
-  /* width: 300px; */
-  /* height: 300px; */
+#image-about {
+  width: 90%;
+  height: 300px;
+  object-fit: contain;
+}
+.about-images {
   display: flex;
 }
-
-#image-abb-2 {
-  width: 60vw;
-  /* height: 525px; */
-  /* object-fit: contain; */
+h3 {
+  color: var(--grayscale-50, #333);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
 }
 
-.image-sub {
-  background: #2c3878;
-  /* width: 120px; */
-}
-
-p {
-  font-size: 15px;
-  color: #fff;
-  width: 40px;
-  left: 0.5rem;
-  position: relative;
+.about-text {
+  width: 311px;
+  font-size: 18px;
+  /* padding-top: 40px; */
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
+  color: #9c9c9c;
 }
 
-#first,
-#second,
-#third {
-  font-size: 10px;
+.button {
+  background-color: #2c3878;
+  padding: 14px 32px;
+  text-transform: capitalize;
   color: #fff;
-  /* width: 110px; */
-  padding: 1% 4px 10px;
-  text-align: center;
-  font-weight: 400;
-  line-height: 160%;
+  gap: 10px;
+  text-decoration: none;
+}
+.about-image2 {
+  height: 60px;
+  display: inline-flex;
+  background-color: #fff;
+  color: #000000;
+  font-size: 12px;
+  font-style: normal;
+  gap: 10px;
+  font-weight: 600;
+  right: 95px;
+  top: 75px;
+  position: relative;
+  place-items: center;
+}
+
+.cap-image {
+  padding-left: 4px;
+  overflow: hidden;
+  width: 80px;
+  height: 56px;
 }
 .bottom-abb-cont-2 {
   /* width: 300px; */
@@ -177,45 +197,64 @@ p {
   }
 
   .layout-one {
-    width: 700px;
+    width: 600px;
   }
   .sub-lay {
-    width: 700px;
+    /* width: 600px; */
     align-items: center;
   }
   .svc-word {
-    width: 500px;
+    width: 400px;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 160%;
   }
+  .about-section,
+  .about-section-1,
+  .about-section-2,
+  .about-section-3,
+  .about-section-4 {
+    /* padding-top: 50px; */
+    width: 600px;
+  }
+  h3 {
+    font-size: 24px;
+  }
+
+  .about-text {
+    width: 70%;
+    font-size: 29px;
+    padding-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+  }
+
+  #image-lay {
+    width: 100%;
+    height: 500px;
+    /* object-fit: contain; */
+  }
+
   .line {
-    width: 400px;
+    width: 450px;
+  }
+
+  #image-about {
+    padding-top: 50px;
+    width: 100%;
+    height: 400px;
+    padding-top: 40px;
+    object-fit: contain;
   }
 
   #word-s {
-    font-size: 26px;
-    font-weight: 600;
-    color: #000;
-    line-height: 170%;
-  }
-  .bottom-abb-cont {
-    width: 700px;
-  }
-  p {
     font-size: 36px;
-    color: #fff;
-    width: 40px;
-    left: 2rem;
   }
-  #first,
-  #second,
-  #third {
-    font-size: 18px;
-    color: #fff;
-    /* width: 110px; */
-    padding: 5% 25px 17px;
+  .rule-two {
+    gap: 10px;
+    font-size: 16px;
   }
   .bottom-abb-cont-2 {
     width: 700px;
@@ -226,6 +265,7 @@ p {
   }
   .last-abb-cont {
     text-align: center;
+    padding-top: 40px;
   }
   #text-btm-abb {
     font-size: 18px;
@@ -243,70 +283,92 @@ p {
 
 @media (min-width: 1110px) {
   .layout-one {
-    width: 1200px;
+    width: 1100px;
   }
   .sub-lay {
     width: 1200px;
     align-items: center;
   }
+  .about-section,
+  .about-section-1,
+  .about-section-2,
+  .about-section-3,
+  .about-section-4 {
+    /* padding-top: 50px; */
+    width: 1200px;
+  }
 
   .svc-word {
-    width: 582px;
+    width: 518px;
   }
   .line {
     width: 464px;
   }
-
-  .bottom-abb-cont {
-    gap: 40px;
+  .rule-two {
+    padding-top: 40px;
     width: 1200px;
-    display: flex;
-  }
-  #word-s {
-    display: flex;
-    width: 609px;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 170%;
-    /* margin-top: 24px; */
   }
 
-  #image-abb-2 {
-    width: 80vw;
+  #image-about {
+    width: 883px;
     height: 525px;
-    /* object-fit: contain; */
-  }
-
-  .image-sub {
-    width: 192px;
-
-    height: 525px;
-    background: #2c3878;
-  }
-
-  p {
-    font-size: 52px;
-    width: 132px;
-    /* text-align: center; */
-    left: 1.5rem;
+    padding-top: 60px;
     position: relative;
+    left: 30px;
   }
 
-  #first,
-  #second,
-  #third {
+  .about-section {
+    display: flex;
+    flex-direction: row;
+    padding-top: 2px;
+  }
+  .about-section-1 {
+    display: flex;
+    flex-direction: row;
+    /* padding-top: 40px; */
+  }
+  .about-section-2 {
+    display: flex;
+    flex-direction: row-reverse;
+    /* padding-top: 40px; */
+  }
+  .about-section-3 {
+    display: flex;
+    flex-direction: row;
+    /* padding-top: 40px; */
+  }
+  .about-section-4 {
+    display: flex;
+    flex-direction: row-reverse;
+    /* padding-top: 40px; */
+  }
+
+  .about-text {
+    width: 180px;
+    height: 145px;
     font-size: 18px;
-    text-align: center;
-    /* left: 1.5rem; */
+    top: 160px;
     position: relative;
-    padding: 2% 5px 4rem;
   }
-  #caption {
-    font-size: 36px;
-    width: 176px;
+  #img-port-1 {
+    display: flex;
+    flex-flow: row-reverse;
   }
 
+  #img-port {
+    height: 90px;
+    font-size: 18px;
+    position: relative;
+    right: -6rem;
+  }
+  h3 {
+    width: 204px;
+    /* height: 64px; */
+  }
+
+  #word-s {
+    font-size: 36px;
+  }
   .bottom-abb-cont-2 {
     width: 1200px;
     font-size: 36px;
