--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ main {
   height: 200px;
   background: #2c3878;
   right: 10rem;
-  
+
   bottom: 1rem;
   position: relative;
 }
@@ -191,7 +191,7 @@ p {
 
 .left-part {
   display: flex;
-  width: 70%;
+  width: 82%;
   padding-top: 4rem;
   font-weight: 600px;
   font-style: normal;
@@ -221,19 +221,19 @@ p {
   font-style: normal;
   line-height: 140%;
   font-weight: 600;
-  color: #333333;
+  /* color: #333333; */
   padding: 15px;
 }
 .link-3 {
   text-decoration: none;
-  width: 32px;
+  /* width: 32px; */
   height: 32px;
   color: #000000;
-  padding-right: 5px;
+  /* padding-right: 5px; */
 }
 
 #word-cap1 {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 .title {
