--- a/contact.css
+++ b/contact.css
@@ -169,9 +169,9 @@ form {
   gap: 20px;
 }
 .left-c {
-  display: flex;
+  display: grid;
   justify-content: space-between;
-  /* gap: 40px; */
+  gap: 20px;
 }
 .title {
   font-size: 18px;
@@ -338,6 +338,9 @@ form {
   .cont-last {
     gap: 40px;
     display: grid;
+  }
+  .left-c {
+    display: flex;
   }
 }
 
