--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ footer {
 
 .top-foot {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
   height: 300px;
@@ -141,22 +142,24 @@ footer {
   height: 495px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   padding-top: 80px;
   background-color: #fff;
 }
 
 .bottom-left {
-  width: 40%;
+  width: 100%;
   padding-left: 10px;
 }
 
 .bottom-right {
-  width: 50%;
+  width: 100%;
 }
 
 .bottom-form {
   width: 100%;
+  padding-top: 20px;
 }
 
 #bottom-text {
@@ -179,6 +182,7 @@ h5 {
   display: flex;
   gap: 4rem;
   padding-top: 20px;
+  justify-content: space-between;
 }
 
 h6 {
@@ -326,6 +330,10 @@ h4 {
     font-weight: 600px;
     line-height: 170%;
     color: #333;
+  }
+  .bottom-footer {
+    display: flex;
+    flex-direction: row;
   }
 
   .social-images > a {
